category ,subcategory & phone otp fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   location: ^4.4.0
   csc_picker: ^0.2.6
   geocoder_flutter: ^0.2.3-prerelease
+  flutter_neumorphic: ^3.2.0
+
   
 
 
