--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,12 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.16.0
   firebase_auth: ^3.3.17
   cloud_firestore: ^3.1.14
+  firebase_storage: ^10.2.17
   liquid_swipe: ^2.1.0
   animate_do: ^2.1.0
-  intl_phone_number_input: ^0.7.0+2
-  firebase_core: ^1.16.0
   country_code_picker: ^2.0.2
   pinput: ^1.2.0
   flutter_native_splash: ^2.1.6
@@ -35,6 +35,9 @@ dependencies:
   csc_picker: ^0.2.6
   geocoder_flutter: ^0.2.3-prerelease
   flutter_neumorphic: ^3.2.0
+  provider: ^6.0.3
+  image_picker: ^0.8.5+3
+  galleryimage: ^1.2.0
 
   
 
