--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   provider: ^6.0.3
   image_picker: ^0.8.5+3
   galleryimage: ^1.2.0
+  intl: ^0.17.0
+  like_button: ^2.0.4
+  photo_view: ^0.14.0
 
   
 
